--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,7 +10,7 @@ androidx-core-ktx = "1.15.0"
 androidx-espresso-core = "3.6.1"
 androidx-lifecycle = "2.8.4"
 androidx-material = "1.12.0"
-androidx-test-junit = "1.2.1"
+androidx-test-junit = "1.6.1"
 compose-multiplatform = "1.7.3"
 junit = "4.13.2"
 kotlin = "2.1.20"
@@ -23,6 +23,9 @@ ksp = "2.1.20-2.0.0"
 sqlite = "2.5.0"
 spotless = "7.0.3"
 paparazzi = "1.3.5"
+mockk = "1.14.2"
+kotlinx-coroutines-test = "1.10.2"
+androidx-test-junit-ktx = "1.2.1"
 
 [libraries]
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activityCompose" }
@@ -44,6 +47,12 @@ coil-network-ktor = { group = "io.coil-kt.coil3", name = "coil-network-ktor3", v
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 sqlite-bundled = { module = "androidx.sqlite:sqlite-bundled", version.ref = "sqlite" }
+mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
+kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinx-coroutines-test" }
+junit = { module = "junit:junit", version.ref = "junit" }
+junit-ktx = { group = "androidx.test.ext", name = "junit-ktx", version.ref = "androidx-test-junit-ktx" }
+room-testing = { group = "androidx.room", name = "room-testing", version.ref = "room" }
+androidx-test-core-ktx = { group = "androidx.test", name = "core-ktx", version.ref = "androidx-test-junit" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
